update caption of supplemental fig s8 following discussion w/ Edgar Virguez

--- a/doc/submission_02.tex
+++ b/doc/submission_02.tex
@@ -242,8 +242,9 @@ Pedram Hassanzadeh,
 Fred Heutte,
 Adam Massmann,
 Alison Silverstein,
+Vivek Srikrishnan,
 and
-Vivek Srikrishnan
+Edgar Virgüez
 for discussion of this work.
 The authors also thank the developers and maintainers of the open source packages we used, in particular the pydata and pangeo communities, and the many journalists and academics whose timely reporting and commentary has informed our thinking.
 
@@ -354,10 +355,7 @@ This reveals a rise from approximately \SI{10}{\degree F} to nearly \SI{60}{\deg
   \caption{
     ERCOT generator outages from 12:00AM on 14 February 2021 to 12:00AM on 18 February 2021.
     Map produced using ERCOT's Generator Outage/Derate Visualization App (EGOVA) available at \url{https://bit.ly/EGOVA}.
-    Dots show the capacity reduction compared to the full rated capacity.
-    However, as discussed in ref.~\cite{ercotpublic_outagesv2:2021}, ERCOT's seasonal assessment of resource adequacy does not assume that all generators will provide 100\% of their rated capacity.
-    This is particularly true of intermittent resources, so this metric will tend to over-state the generator outages associated with wind and solar resources.
-    We retain this figure only to show that outages occurred across the state.
+    Dot sizes describe the capacity reduction for each outage or derate event, which may not be the same as the difference between the power produced and what ERCOT anticipated, particularly for intermittent resources \cite{ercotpublic_outagesv2:2021}.
   }\label{fig:egova}
 \end{figure}
 
